--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "keywords": [],
   "author": "",
+  "license": "ISC",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/jebdvis/skills-write-javascript-actions/issues"
   },
